# zyzzyva-pc

./: .gitignore  AUTHORS  CHANGES  CMakeLists.txt  LICENSE  Makefile  README  TODO  VERSION  zyzzyva.pri  zyzzyva.pro  zyzzyva.qrc
conf/macosx/: qt.conf
data/help/: about.html  credits.html  define.html  faq.html  index.html  judge.html  load.html  preferences.html  quickstart.html  quiz.html  search.html  thanks.html  toc.html  view.html  wordlists.html  zyzzyva.dcf
data/search/predefined/Hooks/: Back Hook 5s.zzs  Back Hook 6s.zzs  Back Hook 7s.zzs  Back Hook 8s.zzs  Back Hook 9s.zzs  Front Hook 5s.zzs  Front Hook 6s.zzs  Front Hook 7s.zzs  Front Hook 8s.zzs  Front Hook 9s.zzs
data/search/predefined/JQXZ/: J 2-4.zzs  J 2-5.zzs  J 2-6.zzs  J 2-7.zzs  J 2-8.zzs  J 4s.zzs  J 5s.zzs  J 6s.zzs  J 7s.zzs  J 8s.zzs  J Top 7s.zzs  J Top 8s.zzs  Q 2-4.zzs  Q 2-5.zzs  Q 2-6.zzs  Q 2-7.zzs  Q 2-8.zzs  Q 4s.zzs  Q 5s.zzs  Q 6s.zzs  Q 7s.zzs  Q 8s.zzs  Q Top 7s.zzs  Q Top 8s.zzs  Q Without U.zzs  X 2-4.zzs  X 2-5.zzs  X 2-6.zzs  X 2-7.zzs  X 2-8.zzs  X 4s.zzs  X 5s.zzs  X 6s.zzs  X 7s.zzs  X 8s.zzs  X Top 7s.zzs  X Top 8s.zzs  Z 2-4.zzs  Z 2-5.zzs  Z 2-6.zzs  (+9 more)
data/search/predefined/Prefixes/: AB 5-9.zzs  AD 5-9.zzs  AIR 6-9.zzs  ANTI 7-9.zzs  COM 6-9.zzs  CON 6-9.zzs  DE 5-9.zzs  DIA 5-9.zzs  DIS 6-9.zzs  EM 5-9.zzs  EN 5-9.zzs  EX 5-9.zzs  FOR 5-9.zzs  IL 5-9.zzs  IM 5-9.zzs  IN 5-9.zzs  MIS 6-9.zzs  NON 6-9.zzs  OB 5-9.zzs  OUT 5-9.zzs  OVER 7-9.zzs  PRE 6-9.zzs  PRO 6-9.zzs  RE 5-9.zzs  SEA 6-9.zzs  SUB 6-9.zzs  SUN 6-9.zzs  TRI 6-9.zzs  UN 5-9.zzs  UP 5-9.zzs
data/search/predefined/Suffixes/: ABLE 6-9.zzs  AE 5-9.zzs  AGE 6-9.zzs  AL 5-9.zzs  ANE 6-9.zzs  ANT 6-9.zzs  ARY 6-9.zzs  ATE 5-9.zzs  AY 5-9.zzs  BIRD 7-9.zzs  DOM 6-9.zzs  EAU 6-9.zzs  EAUX 7-9.zzs  ENT 6-9.zzs  ER 4-9.zzs  ERY 5-9.zzs  ESS 6-9.zzs  EST 6-9.zzs  ETTE 6-9.zzs  EY 5-9.zzs  FISH 7-9.zzs  FT 4-9.zzs  FUL 6-9.zzs  IA 5-9.zzs  IC 5-9.zzs  IER 6-9.zzs  IEST 7-9.zzs  ILE 5-9.zzs  INE 5-9.zzs  ING 5-9.zzs  INGS 6-9.zzs  ION 5-9.zzs  ISE 5-9.zzs  ISH 6-9.zzs  ISM 5-9.zzs  IST 5-9.zzs  ITE 6-9.zzs  ITIS 6-9.zzs  ITY 5-9.zzs  IUM 5-9.zzs  (+16 more)
data/search/predefined/Top 7s By Stem/: 001 TISANE.zzs  002 SATIRE.zzs  003 RETAIN.zzs  004 ARSINE.zzs  005 SENIOR.zzs  006 TOESIN.zzs  007 REASON.zzs  008 STERNA.zzs  009 INSERT.zzs  010 ORATES.zzs  011 EASTER.zzs  012 TONERS.zzs  013 AIDERS.zzs  014 RAINED.zzs  015 LESION.zzs  016 TORIES.zzs  017 TOILES.zzs  018 SERIAL.zzs  019 NAILER.zzs  020 ALIENS.zzs  021 IONSEA.zzs  022 RETAIL.zzs  023 SALTIE.zzs  024 ENTIRE.zzs  025 RETIES.zzs  026 ATONES.zzs  027 SADTIE.zzs  028 DORIES.zzs  029 GAINER.zzs  030 LISTER.zzs  031 ENTERS.zzs  032 SAINED.zzs  033 SNIDER.zzs  034 SILENT.zzs  035 DIALER.zzs  036 LADIES.zzs  037 DATERS.zzs  038 ADORES.zzs  039 ORALES.zzs  040 SOLATE.zzs  (+61 more)
data/search/predefined/Vowel Dumps/: 2-8 With 70% Vowels.zzs  4s With 2 Is.zzs  4s With 2 Us.zzs  5s With 2 Is.zzs  5s With 2 Us.zzs  6s With 4 Vowels.zzs  8s With 5 Vowels.zzs
data/search/predefined/Word Length/: .zzs  02.zzs  03.zzs  04.zzs  05.zzs  06.zzs  07.zzs  08.zzs  09.zzs  (+6 more)
data/words/north-american/: owl-lwl.txt  twl98.txt
docs/help/: about.html  about.html.in  define.html  index.html  judge.html  load.html  preferences.html  quiz.html  search.html  zyzzyva.dcf
images/: Zyzzyva.icns  zyzzyva-128x128.icns  zyzzyva-splash.xcf  zyzzyva.icns
installer/: README  Zyzzyva.xml  create-linux.sh  create-macx-bundle.sh  create-macx-dmg.sh  create-macx-installer-dmg.sh  create-windows.bat  license.xml  zyzzyva.sh
ospd3/: 2-words.txt  3-words.txt  J-234-words.txt  Q-no-U-words.txt  Q-words.txt  X-words.txt  Z-34-words.txt  all-10-15-words-20030401.txt  all-words.txt  expurgated-words.txt  no-vowel-words.txt
sowpods/: 4-words.txt
src/: AboutDialog.cpp  AboutDialog.h  ActionForm.h  AnalyzeQuizDialog.cpp  AnalyzeQuizDialog.h  Auxil.cpp  Auxil.h  CMakeLists.txt  DAWG.cpp  DAWG.h  DefineForm.cpp  DefineForm.h  DefinitionBox.cpp  DefinitionBox.h  DefinitionDialog.cpp  DefinitionDialog.h  DefinitionLabel.h  Defs.h  HelpDialog.cpp  HelpDialog.h  HelpForm.cpp  HelpForm.h  HookDialog.cpp  HookDialog.h  ImageItem.cpp  ImageItem.h  JudgeDialog.cpp  JudgeDialog.h  JudgeForm.cpp  JudgeForm.h  LetterBag.cpp  LetterBag.h  LookupForm.cpp  LookupForm.h  MainSettings.cpp  MainSettings.h  MainWindow.cpp  MainWindow.h  MatchType.h  NewQuizDialog.cpp  (+70 more)
src/libzyzzyva/: AboutDialog.cpp  AboutDialog.h  ActionForm.h  AnalyzeQuizDialog.cpp  AnalyzeQuizDialog.h  Auxil.cpp  Auxil.h  CardboxAddDialog.cpp  CardboxAddDialog.h  CardboxForm.cpp  CardboxForm.h  CardboxRemoveDialog.cpp  CardboxRemoveDialog.h  CardboxRescheduleDaysSpinBox.cpp  CardboxRescheduleDaysSpinBox.h  CardboxRescheduleDialog.cpp  CardboxRescheduleDialog.h  CardboxRescheduleType.h  CreateDatabaseThread.cpp  CreateDatabaseThread.h  CrosswordGameBoard.cpp  CrosswordGameBoard.h  CrosswordGameBoardWidget.cpp  CrosswordGameBoardWidget.h  CrosswordGameForm.cpp  CrosswordGameForm.h  CrosswordGameGame.cpp  CrosswordGameGame.h  CrosswordGameMove.cpp  CrosswordGameMove.h  CrosswordGameRackWidget.cpp  CrosswordGameRackWidget.h  DatabaseRebuildDialog.cpp  DatabaseRebuildDialog.h  DefineForm.cpp  DefineForm.h  DefinitionBox.cpp  DefinitionBox.h  DefinitionDialog.cpp  DefinitionDialog.h  (+110 more)
src/scripts/: make-ios-quiz.pl
src/tests/: WordEngineTest.cpp  tests.pro
src/tests/data/: 3s-8s-take-X-suffix.txt  3s-8s-take-X-suffix.zzs  3s.txt  3s.zzs  4s-take-A-prefix.txt  4s-take-A-prefix.zzs  7s-not-type1.txt  7s-not-type1.zzs  7s-type1.txt  7s-type1.zzs  8s-prob-1001-2000.txt  8s-prob-1001-2000.zzs  8s-with-5-vowels.txt  8s-with-5-vowels.zzs  8s-with-7-anagrams.txt  8s-with-7-anagrams.zzs  Q-no-U-new-in-owl2.txt  Q-no-U-new-in-owl2.zzs  anagram-Z-vowel-vowel.txt  anagram-Z-vowel-vowel.zzs  anagram-__aerstw.txt  anagram-__aerstw.zzs  anagram-_aeinst.txt  anagram-_aeinst.zzs  pattern-p_r_s.txt  pattern-p_r_s.zzs  pattern-vowel-D-vowel.txt  pattern-vowel-D-vowel.zzs  subanagram-aeiprs.txt  subanagram-aeiprs.zzs
src/zyzzyva/: main.cpp  zyzzyva.cpp  zyzzyva.pro
tests/: tests.pro
(+310 files in other folders)
